--- a/style.css
+++ b/style.css
@@ -7,10 +7,8 @@
 
 /* parent style */
 .parent {
-  /* background: blue; */
   display: flex;
   min-height: 100vh;
-  /* border: 1px solid red; */
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -40,19 +38,24 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  gap: 0.25em;
+  gap: 0.35rem;
 }
 
 /* container child style */
 .box {
-  padding: 2rem;
-  background: #dedede;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  padding: 1.5rem;
   text-transform: uppercase;
   font-weight: bold;
   text-align: center;
-  border: 3px solid rgb(255, 50, 50);
+  border: 3px solid rgb(68, 68, 68);
   border-radius: 0.25rem;
   color: #ffff;
+  transition: all 0.07s ease;
+  background: rgba(206, 204, 204, 0.602);
+  text-shadow: 0 0 0.5rem black;
 }
 
 /* sub sequence style */
@@ -74,18 +77,19 @@
   color: white;
   text-transform: capitalize;
   margin: 0;
-  /* margin-right: 0; */
 }
 
 /* subsequence child style */
 .cell {
   padding: 1.5rem;
   background: #dedede;
+  margin: 1px;
   text-transform: uppercase;
   font-weight: bold;
   text-align: center;
-  border: 3px solid rgb(50, 224, 255);
+  border: 1px solid rgb(50, 224, 255);
   color: #ffff;
+  grid-area: 33px;
 }
 
 /* play btn style */
@@ -101,4 +105,25 @@
   border: 1px solid rgb(255, 50, 50);
   color: #ffff;
   padding: 1rem;
+}
+
+/*                                                              START OF Music settings                                 */
+
+kbd {
+  display: block;
+  font-size: 2rem;
+}
+
+/* when the music is playing */
+.isOn {
+  transform: scale(1.1);
+  border-color: #ffc600;
+  box-shadow: 0 0 1rem #ffc600;
+}
+
+.sound {
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  color: #ffc600;
 }
