--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  gap: 0.25rem;
+  gap: 2px;
   justify-content: center;
   margin-top: 1rem;
 }
@@ -50,16 +50,17 @@
   justify-content: center;
   font-size: 1.5rem;
   padding: 1.2rem;
+  margin:2px;
   /* margin-top: 1rem; */
   text-transform: uppercase;
   font-weight: bold;
   text-align: center;
-  border: 3px solid rgb(68, 68, 68);
+  border: 2px solid rgb(68, 68, 68);
   border-radius: 0.25rem;
   color: #ffff;
-  transition: all 0.07s ease;
   background: rgba(206, 204, 204, 0.602);
   text-shadow: 0 0 0.5rem black;
+  transition: all 0.4s ease;
 }
 
 /* sub sequence style */
@@ -114,15 +115,17 @@
 /*                                                              START OF Music settings                                 */
 
 kbd {
-  /* display: block; */
-  /* font-size: 2rem; */
+  display: block;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  font-size: 2rem;
 }
 
 /* when the music is playing */
 .isOn {
   transform: scale(1.1);
-  border-color: #ffc600;
-  box-shadow: 0 0 1rem #ffc600;
+  border-color: #65fa01;
+  box-shadow: 0 0 1rem #155c1b;
 }
 
 .sound {
