--- a/style.css
+++ b/style.css
@@ -61,7 +61,35 @@
   background: rgba(206, 204, 204, 0.602);
   text-shadow: 0 0 0.5rem black;
   transition: all 0.4s ease;
+
 }
+
+
+.displayBoxImg{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.5rem;
+        padding: 1.2rem;
+        margin:2px;
+        /* margin-top: 1rem; */
+        text-transform: uppercase;
+        font-weight: bold;
+        text-align: center;
+        border: 2px solid rgb(68, 68, 68);
+        border-radius: 0.25rem;
+        color: #ffff;
+        background: rgba(206, 204, 204, 0.602);
+        text-shadow: 0 0 0.5rem black;
+        transition: all 0.4s ease;
+      
+        background:url("./images/zart.PNG");
+        background-size:cover;
+        background-position:center;
+        background-repeat:no-repeat;
+    
+}
+
 
 /* sub sequence style */
 .subContainer {
