--- a/style.css
+++ b/style.css
@@ -1,164 +1,204 @@
-/* page reset */
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-/* parent style */
-.parent {
-  display: flex;
-  min-height: 100vh;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  flex-direction: column;
-  background: linear-gradient(
-      rgba(51, 50, 51, 0.863),
-      rgba(159, 15, 216, 0.068)
-    ),
-    url(../images/3.jpg);
+body {
+  font-family: "Montserrat", sans-serif;
+}
 
-  background-size: cover;
+.app {
+  height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  background: linear-gradient(rgba(80, 69, 69, 0.481), rgba(53, 42, 42, 0.068)),
+    url("../images/3.jpg");
+  /* background: url("../images/3.jpg") */
   background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -1;
 }
 
-#nex {
-  padding: 20px;
-  font-size: 1.2rem;
-  font-weight: 500;
-  font-family: "Courier New", Courier, monospace;
-  color: white;
-  text-transform: capitalize;
-}
-
-/* container style */
-.container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 2px;
-  justify-content: center;
-  margin-top: 1rem;
-}
-
-/* container child style */
-.box {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.5rem;
-  padding: 1.2rem;
-  margin:2px;
-  /* margin-top: 1rem; */
-  text-transform: uppercase;
-  font-weight: bold;
+header h1 {
+  color: rgb(241, 241, 241);
+  margin: 50px 0px 30px 0px;
   text-align: center;
-  border: 2px solid rgb(68, 68, 68);
-  border-radius: 0.25rem;
-  color: #ffff;
-  background: rgba(206, 204, 204, 0.602);
-  text-shadow: 0 0 0.5rem black;
-  transition: all 0.4s ease;
-
+  font-size: 40px;
 }
 
-
-.displayBoxImg{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 1.5rem;
-        padding: 1.2rem;
-        margin:2px;
-        /* margin-top: 1rem; */
-        text-transform: uppercase;
-        font-weight: bold;
-        text-align: center;
-        border: 2px solid rgb(68, 68, 68);
-        border-radius: 0.25rem;
-        color: #ffff;
-        background: rgba(206, 204, 204, 0.602);
-        text-shadow: 0 0 0.5rem black;
-        transition: all 0.4s ease;
-      
-        background:url("./images/zart.PNG");
-        background-size:cover;
-        background-position:center;
-        background-repeat:no-repeat;
-    
+header p {
+  color: white;
+  font-size: 20px;
+  text-align: center;
 }
 
-
-/* sub sequence style */
-.subContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.nex {
   /* border: 1px solid red; */
-  flex-wrap: wrap;
-  flex: 0 1 auto;
-  padding: 2rem;
-}
-
-#six {
-  padding: 20px;
-  font-size: 1.2rem;
-  font-weight: 500;
-  font-family: "Courier New", Courier, monospace;
-  color: white;
-  text-transform: capitalize;
-  margin: 0;
-}
-
-/* subsequence child style */
-.cell {
-  padding: 1.5rem;
-  background: #dedede;
-  margin: 1px;
-  text-transform: uppercase;
-  font-weight: bold;
-  text-align: center;
-  border: 1px solid rgb(50, 224, 255);
-  color: #ffff;
-  grid-area: 33px;
-}
-
-/* play btn style */
-.play {
-  /* padding: 0.25em; */
   display: flex;
+  height: 100%;
+  margin-top: 30%;
+  left: 10px;
   justify-content: center;
-  margin: 10px;
-  background: #dedede;
-  text-transform: uppercase;
-  font-weight: bold;
-  text-align: center;
-  border: 1px solid rgb(255, 50, 50);
-  color: #ffff;
-  padding: 1rem;
+  align-content: center;
+  background: transparent;
+  border-radius: 10px;
 }
 
-/*                                                              START OF Music settings                                 */
+.img {
+  /* max-height: 90%; */
+  width: 100%;
 
-kbd {
-  display: block;
-  padding: 0.5rem;
+  background-image: url(../images/x.jfif);
+  background-position: center;
+  background-repeat: none;
+  /* background-size: cover; */
+  border-radius: 5px 20px 5px;
+  margin: 3px;
+}
+.container {
+  display: flex;
+  background: rgba(85, 126, 139, 0.452);
+  width: 90%;
+  margin-bottom: 20px;
+}
+.box {
+  min-height: 10vh;
+  width: 10px;
+  flex: 1;
+  /* border: 2px solid rgb(68, 68, 68); */
   border-radius: 0.25rem;
-  font-size: 2rem;
+  transition: all 0.4s ease;
+  text-align: center;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+.box p {
+  color: red;
+  margin: 20px;
+}
+
+.displayBoxImg {
+  height: 100px;
+  width: 100px;
+  flex: 1;
+  background-image: url(../images/zart.PNG);
+  background-position: center;
+  background-repeat: none;
+  background-size: cover;
+}
+
+.pad1 {
+  /* background: #60d394; */
+  border: 2px solid #60d394;
+}
+
+.pad2 {
+  border: 2px solid #143d9c;
+}
+
+.pad3 {
+  border: 2px solid #c060d3;
+}
+
+.pad4 {
+  border: 2px solid #d3d160;
+}
+
+.pad5 {
+  border: 2px solid #7895f6be;
+}
+
+.pad6 {
+  border: 2px solid #ffa81c;
+}
+
+.pad7 {
+  border: 2px solid #d21cff;
+}
+
+.pad8 {
+  border: 2px solid #b12714;
+}
+.pad9 {
+  border: 2px solid #00ffd5;
+}
+
+/* Creating the visual display */
+.visual > div {
+  position: absolute;
+  background-image: url(../images/1.png);
+  background-position: center;
+  background-repeat: none;
+  background-size: cover;
+  height: 50px;
+  width: 501px;
+  border-radius: 50%;
+  bottom: 0%;
+  left: 20%;
+  z-index: -1;
+}
+
+.icon {
+  position: absolute;
+  background-image: url(../images/f2.png);
+  background-position: center;
+  background-repeat: none;
+  background-size: cover;
+  height: 50px;
+  width: 501px;
+  border-radius: 50%;
+  bottom: 0%;
+  left: 20%;
+}
+
+@keyframes jump {
+  0% {
+    bottom: 0%;
+    left: 20%;
+    opacity: 1;
+  }
+  50% {
+    bottom: 50%;
+    left: 50%;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+/* styling the balls */
+.visual > div {
+  position: absolute;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  bottom: 0%;
+  z-index: 2;
 }
 
 /* when the music is playing */
 .isOn {
   transform: scale(1.1);
-  border-color: #65fa01;
-  box-shadow: 0 0 1rem #155c1b;
+  border-color: transparent;
+  box-shadow: 0 0 1rem #000000;
 }
 
-.sound {
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  letter-spacing: 0.1rem;
-  color: #ffc600;
+.checkBox {
+  margin-bottom: 20px;
+  /* padding: 101px; */
+}
+
+img .innerImg {
+  /* display: flex; */
+  /* justify-content: center; */
+  /* padding: 30px; */
+  /* max-width: 50px; */
+  /* margin: auto; */
+  /* min-height: 10px; */
 }
