--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   flex-direction: column;
   align-items: center;
   background: linear-gradient(rgba(80, 69, 69, 0.481), rgba(53, 42, 42, 0.068)),
-    url("./images/3.jpg");
+    url("/images/3.jpg");
   /* background: url("../images/3.jpg") */
   background-position: center;
   background-repeat: no-repeat;
